			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

27-Aug-2001
~~~~~~~~~~~
Updated Dutch translation (Jasper Huijsmans).
Send To menu lists contents of all Send To directories in Choices, not just
the first one found.
Fixed another XML compiling problem (Stephen Watson).

23-Aug-2001
~~~~~~~~~~~
Added Customise to `Send To' menu.

22-Aug-2001
~~~~~~~~~~~
Detached Send To menu from main menu structure. Allows key-binding to open
the menu, at least. Main menu now opens quicker (no scanning of Send To dir).
Shift+Menu brings up the menu directly.

20-Aug-2001
~~~~~~~~~~~
Fixed compiling problem with some versions of libxml (Stephen Watson).
Changed a text message in the Options box (about binding keys to menus) into
a button which shows the message in an alert box. Maybe people will read the
message now?

19-Aug-2001
~~~~~~~~~~~
Only use Gtk+ 2.0 if version 1.3.6 or later is installed.
Scrolling using a wheel mouse now always goes at the same speed, whatever the
display style (requested by aardvark joe).

10-Aug-2001
~~~~~~~~~~~
Added 'Send To' menu (Stephen Watson).

Bugfix: Renaming a panel icon didn't update the display (reported by Andrew
	Booker).

07-Aug-2001
~~~~~~~~~~~
Fixed some minor compilation issues (reported by Jasper Huijsmans and Daniel
Richard G.)

03-Aug-2001
~~~~~~~~~~~
Added French translation of the manual (Arnaud Calvo).

24-Jul-2001
~~~~~~~~~~~
Filer wouldn't compile or run if it was in a directory with spaces in the
name (reported by Benjamin Munoz).

23-Jul-2001
~~~~~~~~~~~
Added options for default action window settings for Brief, Force and Recurse
(Liav Asseraf).
New default for sort type is Sort By Name (requested by Andreas Dehmel).
Bugfix: Clicking on a file with no run action set gave two error boxes.

19-Jul-2001
~~~~~~~~~~~
Make Enter in the minibuffer work like Return (requested by Arnaud Calvo).

18-Jul-2001
~~~~~~~~~~~
Added some more hints to pinboard and panel windows to comply with the new