@@ -2,7 +2,10 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(main.c)
 AC_CONFIG_HEADER(config.h)
 
-AC_ARG_ENABLE(rox, , , [
+AC_ARG_WITH(platform,
+[  --with-platform	  platform name, as detected by AppRun],
+[AC_SUBST(with_platform)],
+[
 AC_MSG_ERROR([
 
 Please do not run 'configure' manually - instead, run the AppRun script with
