@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+28-Aug-2001
+~~~~~~~~~~~
+Changed the way the platform name is passed from AppRun to configure; this
+was causing problems compiling on some systems (Richard Boulton).
+
 27-Aug-2001
 ~~~~~~~~~~~
 Updated Dutch translation (Jasper Huijsmans).
